# videoprocess

./: .flake8  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
assets/: README.md
backend/video_engine/: __init__.py  caption.py  export.py
src/electron/: main.js
src/main/: main.js
src/renderer/: index.css  index.html  renderer.js
src/web/: index.css  renderer.js
video-engine/: processor.py
