[project]
name = "video-app-backend"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.8.0.76"
ffmpeg-python = "^0.2.0"
MoviePy = "^1.0.3"
MediaPipe = "^0.10.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lint = "flake8 backend/video_engine/"